--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ cloudpickle
 # retry
 optax
 matplotlib
-torch-2.2.2+cpu
+torch @ https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp310-cp310-linux_x86_64.whl
 pgmpy
 bqskit
 jupyter
