modify 4-2 and add some cnf examples

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cloudpickle
 # retry
 optax
 matplotlib
+tensorflow-cpu==2.16.1
 torch @ https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp310-cp310-linux_x86_64.whl
 pgmpy
 bqskit
