--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit-learn==1.4.0
 seaborn
 PennyLane==0.34.0
 jax==0.3.25
-jaxlib @ https://storage.googleapis.com/jax-releases/nocuda/jaxlib-0.3.25-cp310-cp310-manylinux2014_x86_64.whl
+# jaxlib @ https://storage.googleapis.com/jax-releases/nocuda/jaxlib-0.3.25-cp310-cp310-manylinux2014_x86_64.whl
 tqdm
 cloudpickle
 # retry
@@ -15,8 +15,8 @@ optax==0.1.4
 chex==0.1.5
 scipy==1.11.4
 matplotlib
-tensorflow-cpu==2.16.1
-torch @ https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp310-cp310-linux_x86_64.whl
+# tensorflow-cpu==2.16.1
+# torch @ https://download.pytorch.org/whl/cpu/torch-2.2.2%2Bcpu-cp310-cp310-linux_x86_64.whl
 pgmpy
 bqskit
 jupyter
