update chocoq demo

--- a/janusq/application/chocoq/environment_cpu.yml
+++ b/janusq/application/chocoq/environment_cpu.yml
@@ -1,28 +1,28 @@
-name: choco_cpu
+name: chocoq_cpu
 channels:
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - bzip2=1.0.8=h5eee18b_6
-  - ca-certificates=2024.9.24=h06a4308_0
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libuuid=1.41.5=h5eee18b_0
-  - ncurses=6.4=h6a678d5_0
-  - openssl=1.1.1w=h7f8727e_0
-  - pip=24.2=py310h06a4308_0
-  - python=3.10.0=h12debd9_5
-  - readline=8.2=h5eee18b_0
-  - setuptools=75.1.0=py310h06a4308_0
-  - sqlite=3.45.3=h5eee18b_0
-  - tk=8.6.14=h39e8969_0
-  - wheel=0.44.0=py310h06a4308_0
-  - xz=5.4.6=h5eee18b_1
-  - zlib=1.2.13=h5eee18b_1
+  # - _libgcc_mutex=0.1
+  # - _openmp_mutex=5.1
+  - bzip2=1.0.8
+  - ca-certificates=2024.9.24
+  # - ld_impl_linux-64=2.40
+  - libffi=3.3
+  # - libgcc-ng=11.2.0
+  # - libgomp=11.2.0
+  # - libstdcxx-ng=11.2.0
+  - libuuid=1.41.5
+  - ncurses=6.4
+  - openssl=1.1.1w
+  - pip=24.2
+  - python=3.10.0
+  - readline=8.2
+  - setuptools=75.1.0
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - wheel=0.44.0
+  - xz=5.4.6
+  - zlib=1.2.13
   - pip:
       - annotated-types==0.7.0
       - antlr4-python3-runtime==4.13.1
