--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 qiskit==0.46.0
 qiskit-terra==0.46.0
 qiskit-aer==0.13.3
-qiskit-ignis
+qiskit-ignis==0.7.1
 qiskit-dynamics==0.4.2
 qiskit_finance==0.3.4
 qiskit-experiments==0.5.3
@@ -19,22 +19,22 @@ cloudpickle==3.1.0
 gurobipy==12.0.1
 jax==0.4.14
 jaxlib==0.4.14
-jupyter==1.1.1
-matplotlib==3.10.0
-openai==1.61.0
-opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
-optax==0.2.1
-pandas==2.2.3
-pgmpy==0.1.26
-python-sat==1.8.dev13
+jupyter
+matplotlib
+openai
+opencv-python
+opencv-python-headless
+optax
+pandas
+pgmpy
+python-sat
 ray==2.9.2
 scikit-learn==1.4.0
-scipy==1.11.4
-seaborn==0.13.2
-sympy==1.13.1
-tensorflow==2.17.1
-torch==2.6.0
-torchvision==0.21.0
-tqdm==4.67.1
-z3==0.2.0
+scipy
+seaborn
+sympy
+tensorflow
+torch
+torchvision
+tqdm
+z3
